<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.cyan</groupId>
        <artifactId>cyan-dataman</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>cyan-dataman-application</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <flink.version>2.0.1</flink.version>
        <fabric8.version>6.13.4</fabric8.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 强制统一 Fabric8 版本，覆盖 Spring Cloud 锁定的 6.9.2 -->
            <dependency>
                <groupId>io.fabric8</groupId>
                <artifactId>kubernetes-client-bom</artifactId>
                <version>${fabric8.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>cyan-dataman-client</artifactId>
        </dependency>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>cyan-employee-login</artifactId>
        </dependency>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>cyan-datagateway-client</artifactId>
        </dependency>
        <!-- OpenCSV -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.12.0</version> <!-- 最新版本可查询 Maven 仓库 -->
        </dependency>
        <!-- Apache POI (Excel解析) -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.5</version>
        </dependency>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>arch-base</artifactId>
        </dependency>

        <!-- Iceberg Spark 运行时依赖（核心） -->
        <dependency>
            <groupId>org.apache.iceberg</groupId>
            <artifactId>iceberg-spark-runtime-4.0_2.13</artifactId>
            <version>1.10.1</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.13</artifactId>
            <version>4.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.13</artifactId>
            <version>4.0.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-streaming-java</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-clients</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-table-api-java</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-table-runtime</artifactId>
            <version>${flink.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-table-planner-loader</artifactId>
            <version>${flink.version}</version>
        </dependency>

        <!-- Flink Connector Base -->
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-connector-base</artifactId>
            <version>${flink.version}</version>
        </dependency>

        <!-- Flink Kafka Connector -->
        <dependency>
            <groupId>org.apache.flink</groupId>
            <artifactId>flink-connector-kafka</artifactId>
            <version>4.0.1-2.0</version>
        </dependency>

        <!-- Iceberg Flink Runtime (包含所有 Iceberg 功能，包括 shade 的 Parquet) -->
        <dependency>
            <groupId>org.apache.iceberg</groupId>
            <artifactId>iceberg-flink-runtime-2.0</artifactId>
            <version>1.10.1</version>
            <exclusions>
                <exclusion>
                    <groupId>software.amazon.awssdk</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- Gravitino 客户端依赖 -->
        <dependency>
            <groupId>org.apache.gravitino</groupId>
            <artifactId>gravitino-client-java-runtime</artifactId>
            <version>1.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.iceberg</groupId>
            <artifactId>iceberg-core</artifactId>
            <version>1.10.1</version>
        </dependency>
        <!-- Iceberg AWS S3 -->
        <dependency>
            <groupId>org.apache.iceberg</groupId>
            <artifactId>iceberg-aws</artifactId>
            <version>1.10.1</version>
        </dependency>
        <!-- Iceberg AWS 扩展（核心依赖） -->
        <dependency>
            <groupId>org.apache.iceberg</groupId>
            <artifactId>iceberg-aws-bundle</artifactId>
            <version>1.10.1</version> <!-- 必须与你的 iceberg-core 版本一致 -->
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-aws</artifactId>
            <version>3.4.1</version>
        </dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>bundle</artifactId>
            <version>2.25.20</version>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>com.alibaba.fastjson2</groupId>
            <artifactId>fastjson2</artifactId>
            <version>2.0.52</version>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope> <!-- 运行时依赖，编译期无需 -->
        </dependency>
        <!--javax,jakarta适配spark-->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>5.0.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>2.1.1</version>
        </dependency>

        <!-- Kubernetes Client（管理 FlinkDeployment CR） -->
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-client</artifactId>
            <version>6.13.4</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>cyan-dataman</finalName>
        <plugins>
            <!-- 核心JAR打包插件（自定义JAR名称、排除不必要文件等） -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.3.13</version> <!-- 与父依赖版本一致 -->
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal> <!-- 关键：重新打包为可执行 JAR -->
                        </goals>
                    </execution>
                </executions>
                <!-- 可选：指定主类（如果插件未自动识别） -->
                <configuration>
                    <mainClass>com.cyan.dataman.Application</mainClass>
                    <!-- 修正：移除错误的 <resources> 节点，仅保留 groupId/artifactId 排除 -->
                    <excludes>
                        <exclude>
                            <groupId>org.apache.hive</groupId>
                            <artifactId>hive-common</artifactId>
                        </exclude>
                    </excludes>
                    <requiresUnpack>
                        <!-- 解决 Hive 依赖在 Jar 内的类加载问题 -->
                        <dependency>
                            <groupId>org.apache.hive</groupId>
                            <artifactId>hive-exec</artifactId>
                        </dependency>
<!--                        <dependency>-->
<!--                            <groupId>org.apache.iceberg</groupId>-->
<!--                            <artifactId>iceberg-hive</artifactId>-->
<!--                        </dependency>-->
                    </requiresUnpack>
                </configuration>

            </plugin>

            <!-- SqlRunner 已迁移到 cyan-dataman-flink-runner 模块打包 -->
        </plugins>
    </build>
</project>
